This file contains a detailed explanation of the changes between individual
versions of XINS.

$Id$

______________________________________________________________________________
CHANGES INTRODUCED IN XINS 1.1.0 BETA 2:

* XINS/Java Common Library:
  - Added a ProtectedList class which implements a java.util.List where
    elements can be added or removed only using the key passed in the 
    constructor.
    This object is now used in the org.xins.common.xml.Element.
    Typical impact on performance: Small.

* XINS/Java Server Framework:
  - Small style improvements.

______________________________________________________________________________
CHANGES INTRODUCED IN XINS 1.1.0 BETA 1:

* XINS/Java Common Library:
  - Fixed SF.net bug #1099406: ProgrammingError should be RuntimeException.
    Replaced class ProgrammingError with class ProgrammingException and
    changed code accordingly.

* XINS/Java Client Framework:
  - Impact of fix for SF.net bug #1099406: Class ProgrammingError was replaced
    with class ProgrammingException. Changed the code accordingly.

* XINS/Java Server Framework:
  - Fixed SF.net bug #1099473: Pattern for incoming parameters breaks
    compatibility. The change has been reverted. It is scheduled for
    re-introduction in XINS 2.0.0.
  - Impact of fix for SF.net bug #1099406: Class ProgrammingError was replaced
    with class ProgrammingException. Changed the code accordingly.
  - Only the "_function" parameter is supported when using either the standard
    or the XML calling convention. The "function" parameter is treated as a
    normal parameter.
  - The XML is first generated on a StringWriter and its content is sent to
    the Servlet PrintWriter afterwards.
    Typical impact on performance: Small to Medium.

* Build and release process:
  - The Java2HTML pages are now uploaded in a TAR GZ file.

* Generated build file:
  - Improved the create-api and create-function targets.