@@ -6,6 +6,10 @@ $Id$
 ______________________________________________________________________________
 CHANGES INTRODUCED IN XINS 1.1.0 BETA 2:
 
+* XINS/Java Server Framework:
+  - Fixed SF.net bug #1100765: The API name is no longer mandatory. 
+    It is scheduled for re-introduction in XINS 2.0.0.
+
 * XINS/Java Common Library:
   - Added a ProtectedList class which implements a java.util.List where
     elements can be added or removed only using the key passed in the 
